--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <nav
-        class="w-full h-16 shadow-md flex justify-between items-center px-4 fixed top-0 left-0 right-0 z-[100] bg-white-color">
+        class="w-full h-16 lg:h-20 shadow-md flex justify-between items-center px-4 lg:px-16 fixed top-0 left-0 right-0 z-[100] bg-white-color">
         <img src="../assets/logo.svg" alt="logo of dekor" class="w-[100px]">
         <img src="../assets/menu.svg" alt="menu icon" class="w-8">
     </nav>
