UPDATE best product section

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <li><a href="">Contact</a></li>
         </ul>
         <div class="hidden lg:flex gap-3 items-center">
-            <a href="">Sign Up</a>
+            <a href="" class="px-5 py-2 bg-greenish-color rounded-lg">Sign Up</a>
             <a href=""><i
                     class="material-symbols-outlined text-greenish-color bg-brown-color p-3 rounded-xl">shopping_bag</i></a>
         </div>
@@ -173,6 +173,49 @@
                 style="background-image: url('../assets/category-3.svg');"></div>
         </div>
     </section>
+
+    <main class="w-full mt-6 lg:mt-20">
+        <div class="bg-brown-color py-8">
+            <div class="flex justify-between items-center px-3">
+                <div class="text-greenish-color w-[70%]">
+                    <p class="text-sm lg:text-base">OUR PRODUCTS</p>
+                    <h1 class="text-base lg:text-4xl">This month’s best seller</h1>
+                </div>
+                <a class="inline-block bg-greenish-color px-3 py-2 text-xs text-center rounded-xl">
+                    SEE MORE
+                </a>
+            </div>
+            <div class="relative mt-4 lg:mt-12">
+                <div class="flex overflow-auto gap-4 lg:gap-9 px-4">
+                    <img src="../assets/product-1.svg" alt="" class="min-w-[192px] max-w-[300px] rounded-md">
+                    <img src="../assets/product-2.svg" alt="" class="min-w-[192px] max-w-[300px] rounded-md">
+                    <img src="../assets/product-3.svg" alt="" class="min-w-[192px] max-w-[300px] rounded-md">
+                    <img src="../assets/product-4.svg" alt="" class="min-w-[192px] max-w-[300px] rounded-md">
+                </div>
+                <div
+                    class="flex lg:justify-end justify-between absolute top-[50%] left-0 right-0 lg:static lg:gap-5 lg:p-5">
+                    <i class="material-symbols-outlined bg-greenish-color p-2 rounded-full">
+                        chevron_left
+                    </i>
+                    <i class="material-symbols-outlined bg-greenish-color p-2 rounded-full">
+                        chevron_right
+                    </i>
+                </div>
+            </div>
+        </div>
+        <div class="bg-light-grey-color text-brown-color">
+            <p>LIMITED DEALS</p>
+            <h2>Become a member and get 10% off of your first purchase
+            </h2>
+            <form>
+                <input type="email" placeholder="Enter your email here">
+                <button type="submit">
+                    <i class="material-symbols-outlined">mail</i>
+                </button>
+            </form>
+
+        </div>
+    </main>
 
     <div>
         <!-- <h1 id="heading-1">Heading one</h1>
